   Damien Doligez)

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
   code or an OCaml thread stops
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #10730, 10731: Fix bug in `Obj.reachable_words` causing a slowdown when called
  multiple time (Alain Frisch, report by ygrek, review by Xavier Leroy)

### Code generation and optimizations:

- #10578: Increase the number of integer registers used for
  parameter passing on PowerPC (16 registers) and on s390x (8 registers).
  (Xavier Leroy, review by Mark Shinwell)

- #10591, #10615: Tune the heuristic for CSE of integer constants
  so as to avoid excessive CSE on compiler-generated constants
  and long register allocation times.
  (Xavier Leroy, report by Edwin Török, review by Nicolás Ojeda Bär)

- #10681: Enforce boolean conditions for the native backend
  (Vincent Laviron, review by Gabriel Scherer)

- #10719: Ensure that build_apply respects Lambda.max_arity
  (Stephen Dolan, review by Xavier Leroy)

- #10728: Ensure that functions are evaluated after their arguments
  (Stephen Dolan, review by Mark Shinwell)

- #10732: Ensure right-to-left evaluation of arguments in cmm_helpers
  (Greta Yorsh, review by Xavier Leroy)

### Standard library:

* #10622: Annotate `Uchar.t` with immediate attribute
  (Hongbo Zhang, reivew by Gabriel Scherer and Nicolás Ojeda Bär)

* #7812, #10475: `Filename.chop_suffix name suff` now checks that `suff`
  is actually a suffix of `name` and raises Invalid_argument otherwise.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

- #10526: add Random.bits32, Random.bits64, Random.nativebits
  (Xavier Leroy, review by Gabriel Scherer and François Bobot)

* #10568: remove Obj.marshal and Obj.unmarshal
  (these functions have been deprecated for a while and are superseded
   by the functions from module Marshal)
  (François Pottier, review by Gabriel Scherer and Kate Deplaix)
